// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatHeader should render the Chat Header with exploredExperiencesNotification not shown 1`] = `
<div
  class="MuiBox-root css-69i1ev"
  data-testid="chat-header-container-7413b63a-887b-4f41-b930-89e9770db12b"
>
  <a
    aria-current="page"
    class="active"
    data-testid="chat-header-logo-link-7413b63a-887b-4f41-b930-89e9770db12b"
    href="#/"
    style="line-height: 0;"
  >
    <img
      alt="Compass Logo"
      data-testid="chat-header-logo-7413b63a-887b-4f41-b930-89e9770db12b"
      height="48"
      src="/compass.svg"
    />
  </a>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1m1rxeh-MuiTypography-root"
  >
    Compass
  </h1>
  <div
    class="MuiBox-root css-1n05jrb"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1672xf7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="chat-header-button-experiences-7413b63a-887b-4f41-b930-89e9770db12b"
      tabindex="0"
      title="view experiences"
      type="button"
    >
      <span
        class="MuiBadge-root css-1c32n2y-MuiBadge-root"
        data-testid="animated-badge-a348462e-a393-4445-9a3b-c9603e878ce7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="chat-header-icon-experiences-7413b63a-887b-4f41-b930-89e9770db12b"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 12h4v1.5h-4zm0 3h4v1.5h-4z"
          />
          <path
            d="M20 7h-5V4c0-1.1-.9-2-2-2h-2c-1.1 0-2 .9-2 2v3H4c-1.1 0-2 .9-2 2v11c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2m-9 0V4h2v5h-2zm9 13H4V9h5c0 1.1.9 2 2 2h2c1.1 0 2-.9 2-2h5z"
          />
          <circle
            cx="9"
            cy="13.5"
            r="1.5"
          />
          <path
            d="M11.08 16.18c-.64-.28-1.34-.43-2.08-.43s-1.44.15-2.08.43c-.56.24-.92.78-.92 1.39V18h6v-.43c0-.61-.36-1.15-.92-1.39"
          />
        </svg>
        <span
          class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-ohrnoc-MuiBadge-badge"
        />
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1p1b6w7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="auth-language-selector-f4d06e4b-0e0c-49c7-ad93-924c5ac89070"
      tabindex="0"
      title="Language Selector"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="LanguageOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      data-testid="b7499b01-8082-4209-8667-c7d559a70caf-menu"
    >
      <div
        data-testid="english-selector-f4d06e4b-0e0c-49c7-ad93-924c5ac89070"
      >
        English
      </div>
      ;
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1672xf7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="chat-header-button-user-7413b63a-887b-4f41-b930-89e9770db12b"
      tabindex="0"
      title="user info"
      type="button"
    >
      <img
        alt="User Icon"
        data-testid="chat-header-icon-user-7413b63a-887b-4f41-b930-89e9770db12b"
        src="/user-icon.svg"
      />
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    data-testid="b7499b01-8082-4209-8667-c7d559a70caf-menu"
  >
    <div
      data-testid="start-new-conversation-7413b63a-887b-4f41-b930-89e9770db12b"
    >
      start new conversation
    </div>
    <div
      data-testid="logout-button-7413b63a-887b-4f41-b930-89e9770db12b"
    >
      logout
    </div>
    ;
  </div>
  <div
    data-testid="anonymous-account-conversion-dialog-a4b3c2d1-e5f6-4g7h-8i9j-0k1l2m3n4o5p"
  />
</div>
`;

exports[`ChatHeader should render the Chat Header with exploredExperiencesNotification shown 1`] = `
<div
  class="MuiBox-root css-69i1ev"
  data-testid="chat-header-container-7413b63a-887b-4f41-b930-89e9770db12b"
>
  <a
    aria-current="page"
    class="active"
    data-testid="chat-header-logo-link-7413b63a-887b-4f41-b930-89e9770db12b"
    href="#/"
    style="line-height: 0;"
  >
    <img
      alt="Compass Logo"
      data-testid="chat-header-logo-7413b63a-887b-4f41-b930-89e9770db12b"
      height="48"
      src="/compass.svg"
    />
  </a>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1m1rxeh-MuiTypography-root"
  >
    Compass
  </h1>
  <div
    class="MuiBox-root css-1n05jrb"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1672xf7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="chat-header-button-experiences-7413b63a-887b-4f41-b930-89e9770db12b"
      tabindex="0"
      title="view experiences"
      type="button"
    >
      <span
        class="MuiBadge-root css-1c32n2y-MuiBadge-root"
        data-testid="animated-badge-a348462e-a393-4445-9a3b-c9603e878ce7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="chat-header-icon-experiences-7413b63a-887b-4f41-b930-89e9770db12b"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 12h4v1.5h-4zm0 3h4v1.5h-4z"
          />
          <path
            d="M20 7h-5V4c0-1.1-.9-2-2-2h-2c-1.1 0-2 .9-2 2v3H4c-1.1 0-2 .9-2 2v11c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2m-9 0V4h2v5h-2zm9 13H4V9h5c0 1.1.9 2 2 2h2c1.1 0 2-.9 2-2h5z"
          />
          <circle
            cx="9"
            cy="13.5"
            r="1.5"
          />
          <path
            d="M11.08 16.18c-.64-.28-1.34-.43-2.08-.43s-1.44.15-2.08.43c-.56.24-.92.78-.92 1.39V18h6v-.43c0-.61-.36-1.15-.92-1.39"
          />
        </svg>
        <span
          class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-9cqolc-MuiBadge-badge"
        >
          <span
            class="css-1tmou61"
          >
            1
          </span>
        </span>
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1p1b6w7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="auth-language-selector-f4d06e4b-0e0c-49c7-ad93-924c5ac89070"
      tabindex="0"
      title="Language Selector"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="LanguageOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      data-testid="b7499b01-8082-4209-8667-c7d559a70caf-menu"
    >
      <div
        data-testid="english-selector-f4d06e4b-0e0c-49c7-ad93-924c5ac89070"
      >
        English
      </div>
      ;
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1672xf7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="chat-header-button-user-7413b63a-887b-4f41-b930-89e9770db12b"
      tabindex="0"
      title="user info"
      type="button"
    >
      <img
        alt="User Icon"
        data-testid="chat-header-icon-user-7413b63a-887b-4f41-b930-89e9770db12b"
        src="/user-icon.svg"
      />
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    data-testid="b7499b01-8082-4209-8667-c7d559a70caf-menu"
  >
    <div
      data-testid="start-new-conversation-7413b63a-887b-4f41-b930-89e9770db12b"
    >
      start new conversation
    </div>
    <div
      data-testid="logout-button-7413b63a-887b-4f41-b930-89e9770db12b"
    >
      logout
    </div>
    ;
  </div>
  <div
    data-testid="anonymous-account-conversion-dialog-a4b3c2d1-e5f6-4g7h-8i9j-0k1l2m3n4o5p"
  />
</div>
`;

exports[`ChatHeader should show feedback button when sentry is initialized 1`] = `
<div
  class="MuiBox-root css-69i1ev"
  data-testid="chat-header-container-7413b63a-887b-4f41-b930-89e9770db12b"
>
  <a
    aria-current="page"
    class="active"
    data-testid="chat-header-logo-link-7413b63a-887b-4f41-b930-89e9770db12b"
    href="#/"
    style="line-height: 0;"
  >
    <img
      alt="Compass Logo"
      data-testid="chat-header-logo-7413b63a-887b-4f41-b930-89e9770db12b"
      height="48"
      src="/compass.svg"
    />
  </a>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1m1rxeh-MuiTypography-root"
  >
    Compass
  </h1>
  <div
    class="MuiBox-root css-1n05jrb"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1672xf7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="chat-header-button-experiences-7413b63a-887b-4f41-b930-89e9770db12b"
      tabindex="0"
      title="view experiences"
      type="button"
    >
      <span
        class="MuiBadge-root css-1c32n2y-MuiBadge-root"
        data-testid="animated-badge-a348462e-a393-4445-9a3b-c9603e878ce7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="chat-header-icon-experiences-7413b63a-887b-4f41-b930-89e9770db12b"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 12h4v1.5h-4zm0 3h4v1.5h-4z"
          />
          <path
            d="M20 7h-5V4c0-1.1-.9-2-2-2h-2c-1.1 0-2 .9-2 2v3H4c-1.1 0-2 .9-2 2v11c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2m-9 0V4h2v5h-2zm9 13H4V9h5c0 1.1.9 2 2 2h2c1.1 0 2-.9 2-2h5z"
          />
          <circle
            cx="9"
            cy="13.5"
            r="1.5"
          />
          <path
            d="M11.08 16.18c-.64-.28-1.34-.43-2.08-.43s-1.44.15-2.08.43c-.56.24-.92.78-.92 1.39V18h6v-.43c0-.61-.36-1.15-.92-1.39"
          />
        </svg>
        <span
          class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-ohrnoc-MuiBadge-badge"
        >
          <span
            class="css-1tmou61"
          >
            0
          </span>
        </span>
      </span>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1672xf7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="chat-header-button-feedback-7413b63a-887b-4f41-b930-89e9770db12b"
      tabindex="0"
      title="give feedback"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="chat-header-icon-feedback-7413b63a-887b-4f41-b930-89e9770db12b"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m0 14H5.17l-.59.59-.58.58V4h16zm-9-4h2v2h-2zm0-6h2v4h-2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1p1b6w7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="auth-language-selector-f4d06e4b-0e0c-49c7-ad93-924c5ac89070"
      tabindex="0"
      title="Language Selector"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="LanguageOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      data-testid="b7499b01-8082-4209-8667-c7d559a70caf-menu"
    >
      <div
        data-testid="english-selector-f4d06e4b-0e0c-49c7-ad93-924c5ac89070"
      >
        English
      </div>
      ;
    </div>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1672xf7-MuiButtonBase-root-MuiIconButton-root"
      data-testid="chat-header-button-user-7413b63a-887b-4f41-b930-89e9770db12b"
      tabindex="0"
      title="user info"
      type="button"
    >
      <img
        alt="User Icon"
        data-testid="chat-header-icon-user-7413b63a-887b-4f41-b930-89e9770db12b"
        src="/user-icon.svg"
      />
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    data-testid="b7499b01-8082-4209-8667-c7d559a70caf-menu"
  >
    <div
      data-testid="start-new-conversation-7413b63a-887b-4f41-b930-89e9770db12b"
    >
      start new conversation
    </div>
    <div
      data-testid="report-bug-button-7413b63a-887b-4f41-b930-89e9770db12b"
    >
      report a bug
    </div>
    <div
      data-testid="logout-button-7413b63a-887b-4f41-b930-89e9770db12b"
    >
      logout
    </div>
    ;
  </div>
  <div
    data-testid="anonymous-account-conversion-dialog-a4b3c2d1-e5f6-4g7h-8i9j-0k1l2m3n4o5p"
  />
</div>
`;
